docs(tickets): mark T006 done — @PreAuthorize method security enabled